--- a/contenido/unidad_2/ejemplos/kubernetes/goserver.yaml
+++ b/contenido/unidad_2/ejemplos/kubernetes/goserver.yaml
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: go-server-service
+  name: go-server-service #DNS
   namespace: sopes1
 spec:
   selector:
